# thriftclass

./: .gitignore  LICENSE  README.md  demo.py  pyproject.toml
.github/workflows/: test.yml
tests/: test_thriftclass.py
thriftclass/: __init__.py  core.py  report.py  utils.py
thriftclass/strategies/: adaptive.py  bools.py  compacts.py  slots.py  strings.py
