[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "thriftclass"
version = "0.1.0"
description = "Automatic memory optimization for Python classes"
requires-python = ">=3.10"
license = {text = "MIT"}
readme = "README.md"
keywords = ["memory", "optimization", "slots", "packing", "thrift"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Source = "https://github.com/varnie/thriftclass"

[tool.setuptools.packages.find]
include = ["thriftclass*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "UP"]

[tool.ruff.format]
quote-style = "double"